# agora

./: .gitignore  README.md
.github/workflows/: check-migrations.yml  deploy-api.yml  deploy-scraper.yml  test-scraper.yml
ansible/: deploy.yml  inventory.ini
api/: .env.example  README.md  main.py  pyproject.toml
api/app/: __init__.py  config.py  main.py
api/app/database/: __init__.py
api/app/models/: __init__.py
api/app/routers/: clusters.py  feed.py  people.py  providers.py
infra/: .terraform.lock.hcl  cloudflare.tf  grafana-alerts.tf  main.tf  outputs.tf  prod.tfvars.template  rest-api.tf  terraform.tfvars  variables.tf
scraper/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.alloy  db.sqlite  docker-compose.yml  mypy.ini  pyproject.toml
scraper/alembic/: env.py
scraper/alembic/versions/: 04494b6360cc_added_votes_table.py  17a4f4d1b30b_added_categories_array_to_articles.py  2446b9fe23fd_enable_on_delete_set_null_on_article_.py  479d12d6c013_added_run_id_index_on_aritcle_cluster_.py  5afa426bc7c2_added_mossdata.py  5b2a6b548dff_add_cluster_table.py  5eda10a83431_added_an_llm_rank_to_the_article_table_.py  7045cddb9867_initial_migration.py  73cf0666d085_add_published_at_news_provider_key_.py  7bef5e692ddd_added_image_urls_to_article.py  8de5e3a3e1cf_add_is_paywalled_to_article.py  91757614c256_added_bias_rating_field_to_provider_.py  924de4a72004_add_slug_to_cluster.py  94f257bd3493_add_indexes.py  99f0aae7e791_make_published_at_required.py  a5ac08e3e84b_fix_cluster_id_foreign_key_on_article_.py  a6699cebd74c_add_social_posts_tables_for_linking_to_.py  a779efd6c49b_remove_title_uq_constraint_on_cluster.py  af4ee713bd84_make_title_embedding_required.py  b5775fc5b404_cluster_run_schema_refactor.py  f1492fbc5923_add_run_id_to_clusterv2_table.py  fb193cb38c13_add_rank_to_news_provider.py
scraper/app/: config.py  database.py  extractor.py  fetch_urls.py  main.py  models.py  openrouter.py  process.py  utils.py
scraper/app/clusterer/: cluster.py  generate_cluster_titles.py  grok4.py  hash_cluster.py  o3.py  run_clustering.py
scraper/app/database/: __init__.py  database.py  repositories.py  schema.py  seed_news_providers.py  services.py  unit_of_work.py
scraper/app/extractor/: crawl4ai.py  extract_article.py  extractor.py  llm_extractor.py  readability_extractor.py
scraper/app/feeds/: fetch_articles.py  fetch_rss_feed.py
scraper/app/pipeline/: __init__.py  analyzer.py  discover_articles.py  images.py  process.py
scraper/app/providers/: README.md  _24ur.py  bloombergadria.py  cekin.py  delo.py  demokracija.py  dnevnik.py  domovina.py  enums.py  fetch.py  finance.py  info360.py  keys.py  ljubljanskenovice.py  lokalec.py  maribor24.py  mladina.py  n1info.py  necenzurirano.py  news_provider.py  nova24tv.py  planettv.py  primorskenovice.py  providers.py  ranks.py  reporter.py  rtv.py  siol.py  slotech.py  slovenskenovice.py  sta.py  svet24.py  vecer.py  zanimame.py  zurnal24.py
scraper/app/tests/: conftest.py
scraper/app/tests/providers/: test_providers.py  test_ranks.py
scraper/app/tests/utils/: test_parse_description_image.py  test_remove_query_params.py
scraper/app/utils/: concurrency.py  ensure_env_var.py  parse_description_image.py  pexels.py  remove_query_params.py  slugify.py
scraper/docker/dynamodb/: shared-local-instance.db
scraper/scraper/: database.py  extractor.py  main.py
scraper/scripts/: bootstrap_cluster_run_script.py  migrate_clusters_script.py  run_clustering_script.py  sync_images.py  transform_images.py
