[project]
name = "scraper"
version = "0.1.0"
description = ""
authors = [{ name = "marko154", email = "marko.gartnar777@gmail.com" }]
requires-python = "~=3.13.0"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.5,<3",
    "python-dotenv>=1.0.1,<2",
    "httpx>=0.28.1,<0.29",
    "xmltodict>=0.14.2,<0.15",
    "tenacity>=9.0.0,<10",
    "crawl4ai>=0.5.0.post8,<0.6",
    "feedparser>=6.0.11,<7",
    "langchain>=0.3.23,<0.4",
    "langchain-openai>=0.3.12,<0.4",
    "langchain-google-genai>=2.1.2,<3",
    "html2text>=2025.4.15,<2026",
    "python-readability>=0.1.3,<0.2",
    "sqlalchemy>=2.0.41,<3",
    "psycopg2-binary>=2.9.10,<3",
    "alembic>=1.14.0,<2",
    "umap-learn>=0.5.9.post2,<0.6",
    "hdbscan>=0.8.40,<0.9",
    "pandas>=2.3.1,<3",
    "numpy>=2.2.2",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "boto3>=1.39.12",
    "boto3-stubs>=1.39.12",
    "pandas-stubs>=2.3.0.250703",
    "plotly>=6.2.0",
    "plotly-stubs>=0.0.5",
]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["scraper/"] # Includes all contents of the scraper directory

[tool.mypy]
enable_incomplete_feature = "NewGenericSyntax"


[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "unit: marks tests as unit tests (fast)",
]
# TODO: Add coverage options when needed: "--cov=app", "--cov-report=term-missing"
# TODO: Add parallel execution when test suite grows: "-n auto" (requires pytest-xdist)
